fix: grant contents:write permission for release creation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,43 +3,70 @@ name: Build and Release Coup
 on:
   push:
     tags:
-      - 'v*' # Runs when you push a tag starting with "v" (e.g. v1.2.0)
+      - 'v*'   # trigger on version tags like v1.2.3
 
 jobs:
+  # ── Run tests once (fast, on Linux) ────────────────────────────────────────
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt pytest
+
+      - name: Run tests
+        run: pytest test_game_engine.py -v
+
+  # ── Build native executables on each platform ───────────────────────────────
   build:
     name: Build on ${{ matrix.os }}
+    needs: test
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
 
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      # 1. Check out the repository
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2. Install Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+          cache: pip
 
-      # 3. Install PyInstaller and game dependencies
-      - name: Install Dependencies
+      # SDL2 headers are needed to pip-install pygame from source on Linux
+      # (the manylinux wheel usually works, but this is a safe fallback)
+      - name: Install Linux system libraries
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller pillow
           pip install -r requirements.txt
 
-      # 4. Build the game (version is taken from the git tag)
-      - name: Build Game
+      - name: Build game
         run: python build_game.py
         env:
           RELEASE_VERSION: ${{ github.ref_name }}
 
-      # 5. Upload the built archive to the GitHub Release
-      - name: Upload to Release
+      - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: build_output/*
