--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,13 @@ name: Build and Release Coup
 on:
   push:
     tags:
-      - 'v*'   # trigger on version tags like v1.2.3
+      - 'v*'
+
+permissions:
+  contents: write
 
 jobs:
-  # ── Run tests once (fast, on Linux) ────────────────────────────────────────
+  # ── Tests (Linux, fast) ─────────────────────────────────────────────────────
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'
           cache: pip
 
       - name: Install dependencies
@@ -26,50 +29,103 @@ jobs:
       - name: Run tests
         run: pytest test_game_engine.py -v
 
-  # ── Build native executables on each platform ───────────────────────────────
-  build:
-    name: Build on ${{ matrix.os }}
+  # ── Linux build inside manylinux_2_28 (glibc >= 2.28 compatible) ────────────
+  build-linux:
+    name: Build (Linux)
     needs: test
-    runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
+      - name: Build inside manylinux_2_28 container
+        env:
+          RELEASE_VERSION: ${{ github.ref_name }}
+        run: |
+          docker run --rm \
+            -v "$GITHUB_WORKSPACE:/workspace" \
+            -w /workspace \
+            -e RELEASE_VERSION="$RELEASE_VERSION" \
+            quay.io/pypa/manylinux_2_28_x86_64 \
+            bash -c "
+              set -e
+              dnf install -y python3.11
+              /usr/bin/python3.11 -m ensurepip --upgrade
+              /usr/bin/python3.11 -m pip install --upgrade pip
+              /usr/bin/python3.11 -m pip install pyinstaller
+              /usr/bin/python3.11 -m pip install -r requirements.txt
+              /usr/bin/python3.11 build_game.py
+            "
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-linux
+          path: build_output/*
+          if-no-files-found: error
+
+  # ── Windows + macOS builds ──────────────────────────────────────────────────
+  build:
+    name: Build (${{ matrix.name }})
+    needs: test
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: windows-latest
+            name: Windows
+            artifact: dist-windows
+          - os: macos-latest
+            name: macOS arm64
+            artifact: dist-macos-arm64
+            target_arch: arm64
+          - os: macos-latest
+            name: macOS x86_64
+            artifact: dist-macos-x86_64
+            target_arch: x86_64
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'
           cache: pip
 
-      # SDL2 headers are needed to pip-install pygame from source on Linux
-      # (the manylinux wheel usually works, but this is a safe fallback)
-      - name: Install Linux system libraries
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y \
-            libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
-
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller pillow
+          pip install pyinstaller
           pip install -r requirements.txt
 
       - name: Build game
-        run: python build_game.py
         env:
           RELEASE_VERSION: ${{ github.ref_name }}
+          TARGET_ARCH: ${{ matrix.target_arch }}
+        run: python build_game.py
 
-      - name: Upload to GitHub Release
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact }}
+          path: build_output/*
+          if-no-files-found: error
+
+  # ── Publish all artifacts in one release ────────────────────────────────────
+  release:
+    name: Publish Release
+    needs: [build-linux, build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          merge-multiple: true
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: build_output/*
+          files: artifacts/*
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
