--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,11 +77,9 @@ jobs:
           - os: macos-latest
             name: macOS arm64
             artifact: dist-macos-arm64
-            target_arch: arm64
-          - os: macos-latest
+          - os: macos-13
             name: macOS x86_64
             artifact: dist-macos-x86_64
-            target_arch: x86_64
 
     runs-on: ${{ matrix.os }}
 
@@ -102,7 +100,6 @@ jobs:
       - name: Build game
         env:
           RELEASE_VERSION: ${{ github.ref_name }}
-          TARGET_ARCH: ${{ matrix.target_arch }}
         run: python build_game.py
 
       - name: Upload artifact
