--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,32 +29,29 @@ jobs:
       - name: Run tests
         run: pytest test_game_engine.py -v
 
-  # ── Linux build inside manylinux_2_28 (glibc >= 2.28 compatible) ────────────
+  # ── Linux build (glibc >= 2.31, ubuntu-20.04) ───────────────────────────────
   build-linux:
     name: Build (Linux)
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build inside manylinux_2_28 container
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          pip install -r requirements.txt
+
+      - name: Build game
         env:
           RELEASE_VERSION: ${{ github.ref_name }}
-        run: |
-          docker run --rm \
-            -v "$GITHUB_WORKSPACE:/workspace" \
-            -w /workspace \
-            -e RELEASE_VERSION="$RELEASE_VERSION" \
-            quay.io/pypa/manylinux_2_28_x86_64 \
-            bash -c "
-              set -e
-              dnf install -y python38
-              /usr/bin/python3.8 -m ensurepip --upgrade
-              /usr/bin/python3.8 -m pip install --upgrade pip
-              /usr/bin/python3.8 -m pip install pyinstaller
-              /usr/bin/python3.8 -m pip install -r requirements.txt
-              /usr/bin/python3.8 build_game.py
-            "
+        run: python build_game.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -63,7 +60,7 @@ jobs:
           path: build_output/*
           if-no-files-found: error
 
-  # ── Windows + macOS builds ──────────────────────────────────────────────────
+  # ── Windows build ───────────────────────────────────────────────────────────
   build:
     name: Build (${{ matrix.name }})
     needs: test
@@ -74,9 +71,9 @@ jobs:
           - os: windows-latest
             name: Windows
             artifact: dist-windows
-          - os: macos-latest
-            name: macOS arm64
-            artifact: dist-macos-arm64
+          # - os: macos-latest
+          #   name: macOS arm64
+          #   artifact: dist-macos-arm64
 
     runs-on: ${{ matrix.os }}
 
