--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,29 +29,32 @@ jobs:
       - name: Run tests
         run: pytest test_game_engine.py -v
 
-  # ── Linux build (glibc >= 2.31, ubuntu-20.04) ───────────────────────────────
+  # ── Linux build inside manylinux_2_28 (glibc >= 2.28 compatible) ────────────
   build-linux:
     name: Build (Linux)
     needs: test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.8'
-          cache: pip
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller
-          pip install -r requirements.txt
-
-      - name: Build game
+      - name: Build inside manylinux_2_28 container
         env:
           RELEASE_VERSION: ${{ github.ref_name }}
-        run: python build_game.py
+        run: |
+          docker run --rm \
+            -v "$GITHUB_WORKSPACE:/workspace" \
+            -w /workspace \
+            -e RELEASE_VERSION="$RELEASE_VERSION" \
+            quay.io/pypa/manylinux_2_28_x86_64 \
+            bash -c "
+              set -e
+              dnf install -y python38
+              /usr/bin/python3.8 -m ensurepip --upgrade
+              /usr/bin/python3.8 -m pip install --upgrade pip
+              /usr/bin/python3.8 -m pip install pyinstaller
+              /usr/bin/python3.8 -m pip install -r requirements.txt
+              /usr/bin/python3.8 build_game.py
+            "
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -60,7 +63,7 @@ jobs:
           path: build_output/*
           if-no-files-found: error
 
-  # ── Windows build ───────────────────────────────────────────────────────────
+  # ── Windows + macOS builds ──────────────────────────────────────────────────
   build:
     name: Build (${{ matrix.name }})
     needs: test
@@ -71,9 +74,6 @@ jobs:
           - os: windows-latest
             name: Windows
             artifact: dist-windows
-          # - os: macos-latest
-          #   name: macOS arm64
-          #   artifact: dist-macos-arm64
 
     runs-on: ${{ matrix.os }}
 
